--- a/capstone-project/public/index.html
+++ b/capstone-project/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <!-- Open Graph protocol -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:title" content="Little Lemon" />
     <meta property="og:type" content="website" />
     <meta
